...
    <string name="about">Eksplorasi dunia reaksi kimia dengan\nlebih mendalam menggunakan\nVirtual Lab!</string>
    <string name="slogan">Jelajahi reaksi kimia dan\ntemukan reaksimu!</string>
    <string name="signin">Masuk</string>
    <string name="create_acc">Buat Akun</string>
<!--  Titles for TopNav  -->
    <string name="register_title">Daftar Akun</string>
    <string name="login_title">Selamat datang</string>
    <string name="materi_title">Materi</string>
    <string name="profile_title">Profil</string>
    <string name="nilai_title">Nilai</string>
    <string name="latihan">Latihan</string>
    <string name="introduction_title">Pengenalan Reaksi Kimia</string>
    <string name="murid_detail_materi_title">Materi X</string>
    <string name="contoh_reaksi_title">Contoh Reaksi</string>
    <string name="add_materi_title">Buat Latihan</string>
    <string name="add_soal_title">Tambah Soal</string>
    <string name="edit_soal_title">Edit Soal</string>
    <!--  Form Labels  -->
    <string name="fullname_label">Nama Lengkap</string>
    <string name="username_label">Nama Pengguna</string>
    <string name="email_label">Alamat Surel</string>
    <string name="nisn_label">Nomor Induk Siswa Nasional (NISN)</string>
    <string name="nip_label">Nomor Induk Pegawai (NIP)</string>
    <string name="school_label">Asal Sekolah</string>
    <string name="password_label">Password</string>
    <string name="edit_password_label">Password Baru</string>
<!--  Buttons -->
    <string name="signup_button">Daftar dan Verifikasi</string>
    <string name="signup_clickable">Daftar</string>
    <string name="logout_button">Keluar</string>
    <string name="edit_button">Ubah</string>
    <string name="cancel_button">Batal</string>
    <string name="save_button">Simpan</string>
    <string name="menu_buat_button">Tambahkan</string>
    <string name="about_button">Tentang Aplikasi</string>
    <string name="account_exist">Sudah pernah mendaftar?</string>
    <string name="no_account">Belum punya akun?</string>
    <string name="back_button">Kembali</string>
<!--   Role   -->
...
    <string name="role_teacher">Guru</string>
    <string name="role_teacher_desc">Bantu murid memahami konsep kimia dengan lebih baik</string>
    <string name="role_student">Murid</string>
    <string name="role_student_desc">Telusuri materi kimia dengan materi belajar yang interaktif</string>
    <string name="role_instruction">Silakan pilih peran Anda untuk memulai:</string>
<!--   Dashboard   -->
    <string name="dashboard_headline">Video perkenalan reaksi kimia</string>
    <string name="dashboard_h2">Melihat Keterkaitan Antara Reaksi Kimia dengan Keseharian Kita</string>
    <string name="dashboard_category_title">Kategori</string>

    <string name="cateogry_pengenalan">Pengenalan</string>
...
    <string name="nilai">Nilai                       : </string>
    <string name="tingkat_kesulitan">Tingkat kesulitan: </string>
    <string name="latihan_title">Latihan 1</string>
<!--   About   -->
    <string name="about_app">Virtual Lab adalah sebuah platform pembelajaran yang menyediakan materi dan visualisasi interaktif tentang pengenalan reaksi kimia, contoh reaksi kimia, materi reaksi, dan latihan penyetaraan reaksi kimia. Platform ini merupakan platform kolaborasi antara mahasiswa Universitas Telkom dan Guru MGMP Kimia Kota Bandung.\n</string>
...

<!--   Detail Latihan   -->
    <string name="latihan_x">Latihan X</string>
    <string name="instructions">Pilih 2 jawaban:</string>
    <string name="indicator_soal">Indicator warna untuk tiap soal</string>
...
    <string name="indicator_keempat">Pilihan jawaban keempat</string>
<!--  Cek Jawaban  -->
    <string name="cek_jawaban_title">Cek Jawaban</string>
    <string name="lihat_kunci_jawaban">Lihat Kunci Jawaban</string>
    <string name="answer_key">Jawaban yang benar adalah 4 dan 8</string>
...
    <string name="guru_empty_state">Belum ada data yang ditambahkan</string>
    <string name="gambar_empty_state_guru">Gambar belum ada data ditambahkan</string>
    <string name="fab_slide_up_title">Apa yang ingin kamu tambahkan?</string>
    <string name="lihat_slide_up_title">Riwayat apa yang ingin kamu lihat?</string>
    <string name="lihat_latihan_title">Riwayat Latihan</string>
    <string name="lihat_materi_title">Riwayat Materi</string>
    <string name="buat_latihan_button">Tambah Latihan</string>
    <string name="buat_materi_button">Tambah Materi</string>
    <string name="reaksi_content_header">Berikut adalah contoh reaksi kimia yang terjadi di kehidupan sehari-hari:</string>
...
    <string name="tingkat_kesulitan_data">Mudah</string>
    <string name="perintah_soal">Setarakan persamaan reaksi kimia berikut!</string>
    <string name="soal_title">Soal 1</string>
    <string name="pertanyaan">C4H10 + O2 = ...CO2 + ...H20 </string>
    <string name="kunci_jawaban">Kunci Jawaban</string>
    <string name="jawaban_pertama">Jawaban 1</string>
    <string name="jawaban_kedua">Jawaban 2</string>

    <!--    Buat Materi   -->
...
    <string name="difficulty_soal">Tingkat Kesulitan : </string>
    <string name="number_soal_1">Soal 1</string>
    <string name="soal">Tulis Soal</string>
    <string name="pilihan_jawaban">Pilihan Jawaban</string>
    <string name="jawaban_placeholder">Jawaban</string>
<!--    <string name="pilihan_2">Jawaban 2</string>-->
<!--    <string name="pilihan_3">Jawaban 3</string>-->
<!--    <string name="pilihan_4">Jawaban 4</string>-->
    <string name="number_soal_2">Soal 2</string>
    <string name="button_unggah">Unggah Soal</string>

    <string name="kosong">""</string>
...

    <!--    Dashboard Admin   -->
    <string name="cek_role_categories">Cek Peran Akun</string>
    <string name="cek_file_categories">Cek Berkas</string>
    <string name="icon_logout">Gambar ikon logout</string>
...
    <!--    Users Info Admin   -->
    <string name="check_users_title">"Daftar akun baru dibuat: "</string>
    <string name="button_terima">Terima</string>
    <string name="button_tolak">Tolak</string>
    <string name="accept_user_toast">Anda menerima akun ini</string>
    <string name="nip_author">NIP</string>
...
