...
                    )
                }
                .padding(horizontal = 32.dp)
                .verticalScroll(rememberScrollState())
        ) {
            RegularText(
                modifier = Modifier.testTag("Judul Latihan Title"),
                text = stringResource(R.string.title_latihan)
            )
            Spacer(modifier = Modifier.height(20.dp))
            CustomTextField(
                modifier = Modifier.testTag("Judul Latihan TF"),
                value = judulLatihan,
                onValueChange = { judulLatihan = it },
                placeholder = R.string.title_latihan
            )
            Spacer(modifier = Modifier.height(20.dp))
            RegularText(text = stringResource(R.string.difficulty_latihan))
            DropdownForm(selectedOptionText, options) { selectedOptionText = it }
            Spacer(modifier = Modifier.height(20.dp))
            RegularText(text = stringResource(R.string.question_count))
            Spacer(modifier = Modifier.height(20.dp))
            CustomTextField(
                modifier = Modifier.testTag("Jumlah Soal TF"),
                enabled = latihanDetailData == null,
                value = jumlahSoal,
                onValueChange = { jumlahSoal = it },
                placeholder = R.string.question_count,
                isPhone = true
            )
...
                    verticalAlignment = Alignment.CenterVertically,
                    horizontalArrangement = Arrangement.Start
                ) {
                    IconButton(onClick = { isChecked = !isChecked }) {
                        Icon(
                            painterResource(if (!isChecked) R.drawable.check_box_outline_blank else R.drawable.check_box_filled),
                            contentDescription = "Check box register",
                            tint = Color(0xFF4D444C),
                            modifier = Modifier
                                .fillMaxSize()
                                .padding(8.dp)
                        )
                    }
...

    Box(
        modifier = Modifier
            .padding(vertical = 10.dp)
    ) {
        ExposedDropdownMenuBox(
            modifier = Modifier.testTag("Dropdown Menu"), expanded = expanded,
            onExpandedChange = { expanded = !expanded }
        ) {
            OutlinedTextField(
                modifier = Modifier
                    .fillMaxWidth()
                    .menuAnchor()
...
