...
                        },
                        colors = buttonColors(DarkBlueDarker),
                        contentPadding = PaddingValues(vertical = 9.dp, horizontal = 47.dp),
                        shape = RoundedCornerShape(5.dp)
                    ) {
                        RegularText(
                            text = "Kumpulkan Jawaban",
                            fontWeight = FontWeight.SemiBold,
                            color = Color.White
                        )
                    }
                    Spacer(modifier = Modifier.height(30.dp))
                }
...
                            containerColor = LightBlue,
                            contentColor = Color.Black
                        ),
                        shape = RoundedCornerShape(10.dp)
                    ) {
                        MediumLargeText(
                            text = "OK",
                            fontWeight = FontWeight.SemiBold,
                            color = Color.Black
                        )
                    }
                }
            }
...
